--- a/dev-scripts/develop.html
+++ b/dev-scripts/develop.html
@@ -3,5 +3,5 @@
     <body>
         Your demo will load soon. If it is not please run `npm run dev`
     </body>
-    <script src="./demo.js"></script>
+    <script src="./develop.js"></script>
 </html>
