Add stylesheets that all skins get
Change-Id: I49e17b151bccc8558eb0ddb0d967535d6eb5826e

--- a/dev-scripts/develop.html
+++ b/dev-scripts/develop.html
@@ -1,5 +1,11 @@
 <!DOCTYPE HTML>
 <html>
+    <head>
+        <link href="https://en.wikipedia.org/w/load.php?lang=en-gb&modules=mediawiki.legacy.shared%7Cext.cite.styles%7Cmediawiki.page.gallery.styles%7Cmediawiki.skinning.interface&only=styles"
+            rel="stylesheet">
+        <link href="https://en.wikipedia.org/w/load.php?lang=en-gb&modules=site.styles&only=styles"
+            rel="stylesheet">
+    </head>
     <body>
         Your demo will load soon. If it is not please run `npm run dev`
     </body>
